--- a/client/src/components/sidePanel/SidePanel.scss
+++ b/client/src/components/sidePanel/SidePanel.scss
@@ -14,9 +14,25 @@
   }
 
   & > .SidePanel-menu-wrapper {
-    width: 30%;
+    width: 100%;
     height: 100%;
     background-color: white;
+
+    @media only screen and (min-width: 576px) {
+      width: 70%;
+    }
+
+    @media only screen and (min-width: 768px) {
+      width: 45%;
+    }
+
+    @media only screen and (min-width: 992px) {
+      width: 40%;
+    }
+
+    @media only screen and (min-width: 1200px) {
+      width: 30%;
+    }
 
     & > button {
       float: right;
@@ -24,8 +40,20 @@
 
     & > .SidePanel-menu {
       padding: 1em;
+      & > .SidePanel-menu-title {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 1em;
+        font-size: 1.75rem;
+
+        & > a > span {
+          margin-right: 10px;
+        }
+      }
       & > .SidePanel-menu-item {
-        margin-top: 3rem;
+        margin-top: 2rem;
+        padding-bottom: 1rem;
+        border-bottom: 1px solid #eeeeee;
         & > .SidePanel-menu-item-wrapper {
           display: flex;
           align-items: center;
@@ -33,13 +61,27 @@
           &:hover {
             cursor: pointer;
           }
+
+          & > .SidePanel-menu-item-title {
+            font-size: 1.3rem;
+
+            & > a {
+              text-decoration: none;
+              color: inherit;
+            }
+          }
         }
         & > .SidePanel-menu-item-list > li {
           list-style-type: none;
           margin-top: 5px;
+          font-size: 0.8rem;
           &:hover {
             cursor: pointer;
             opacity: 0.8;
+          }
+          & > a {
+            text-decoration: none;
+            color: inherit;
           }
         }
       }
