--- a/client/src/components/css/HeaderTop.css
+++ b/client/src/components/css/HeaderTop.css
@@ -11,4 +11,10 @@
     margin-right: 4rem;
   }
 }
+
+@media only screen and (min-width: 1200px) {
+  .Header_headerTop form {
+    width: 50%;
+  }
+}
 /*# sourceMappingURL=HeaderTop.css.map */
