--- a/client/src/components/header/HeaderMenu.scss
+++ b/client/src/components/header/HeaderMenu.scss
@@ -16,4 +16,22 @@
       width: 100%;
     }
   }
+
+  & .collapse-content {
+    position: absolute;
+    top: 100%;
+    background-color: white;
+    z-index: 10;
+    padding: 0 1.5rem;
+
+    @media only screen and (min-width: 991px) {
+      position: inherit;
+      background-color: inherit;
+      padding: 0;
+    }
+
+    & a {
+      white-space: nowrap;
+    }
+  }
 }
