Client: ProductSheet sizes

--- a/client/src/components/css/ProductSheetActions.css
+++ b/client/src/components/css/ProductSheetActions.css
@@ -29,4 +29,8 @@
   padding-left: 5px;
   padding-right: 5px;
 }
+
+.ProductSheetActions > .ProductSheetActions-size > .col > button:disabled {
+  opacity: 0.3;
+}
 /*# sourceMappingURL=ProductSheetActions.css.map */
