--- a/client/src/components/products/ProductSheetActions.scss
+++ b/client/src/components/products/ProductSheetActions.scss
@@ -17,6 +17,12 @@
       margin-top: 1rem;
       padding-left: 5px;
       padding-right: 5px;
+
+      & > button {
+        &:disabled {
+          opacity: 0.3;
+        }
+      }
     }
   }
 }
