--- a/client/src/components/css/ProductSheetActions.css
+++ b/client/src/components/css/ProductSheetActions.css
@@ -27,7 +27,9 @@
 .ProductSheetActions > .ProductSheetActions-size > .col-2 {
   margin-top: 1rem;
   padding-left: 0;
-  padding-right: 5px;
+  padding-right: 0;
+  width: 4rem;
+  margin-right: 15px;
 }
 
 .ProductSheetActions > .ProductSheetActions-size > .col-2 > button {
@@ -36,5 +38,9 @@
 
 .ProductSheetActions > .ProductSheetActions-size > .col-2 > button:disabled {
   opacity: 0.3;
+}
+
+.ProductSheetActions > .ProductSheetActions-size > .col-12 > span {
+  margin-left: 10px;
 }
 /*# sourceMappingURL=ProductSheetActions.css.map */
