--- a/client/src/components/css/CartSummary.css
+++ b/client/src/components/css/CartSummary.css
@@ -15,4 +15,18 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+
+.CartSummary + .Cart-actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.CartSummary + .Cart-actions > button {
+  margin-top: 2rem;
+}
 /*# sourceMappingURL=CartSummary.css.map */
