--- a/client/src/components/header/HeaderTop.scss
+++ b/client/src/components/header/HeaderTop.scss
@@ -9,3 +9,11 @@
     width: 50%;
   }
 }
+
+.counter {
+  position: absolute;
+  font-size: 0.8rem;
+  top: 0;
+  right: 3rem;
+  color: darkorange;
+}
