Client: Countdown completed

--- a/client/src/components/header/HeaderTop.scss
+++ b/client/src/components/header/HeaderTop.scss
@@ -12,8 +12,7 @@
 
 .counter {
   position: absolute;
-  font-size: 0.8rem;
   top: 0;
-  right: 3rem;
-  color: darkorange;
+  font-size: 0.7rem;
+  border-radius: 2px;
 }
