--- a/client/src/components/css/HeaderTop.css
+++ b/client/src/components/css/HeaderTop.css
@@ -20,9 +20,8 @@
 
 .counter {
   position: absolute;
-  font-size: 0.8rem;
   top: 0;
-  right: 3rem;
-  color: darkorange;
+  font-size: 0.7rem;
+  border-radius: 2px;
 }
 /*# sourceMappingURL=HeaderTop.css.map */
