--- a/client/src/components/cart/Cart.scss
+++ b/client/src/components/cart/Cart.scss
@@ -34,3 +34,24 @@
     }
   }
 }
+
+.Cart-empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 4rem;
+
+  & > h1 {
+    margin-bottom: 1rem;
+  }
+
+  & > p {
+    font-size: 1.2rem;
+    font-weight: 300;
+    text-align: center;
+
+    @media only screen and (min-width: 768px) {
+      font-size: 1.5rem;
+    }
+  }
+}
